[Qt] Remove dead code from ImageDecoderQt.

https://bugs.webkit.org/show_bug.cgi?id=27538

Remove unused variables and debugging code. The debug
code has never been used and does not provide anything
useful.

* platform/graphics/qt/ImageDecoderQt.cpp:
(WebCore::ImageDecoderQt::ReadContext::read):
(WebCore::ImageDecoderQt::ReadContext::readImageLines):
(WebCore::ImageDecoderQt::setData):
(WebCore::ImageDecoderQt::isSizeAvailable):
(WebCore::ImageDecoderQt::frameCount):
(WebCore::ImageDecoderQt::repetitionCount):
(WebCore::ImageDecoderQt::filenameExtension):
(WebCore::ImageDecoderQt::imageAtIndex):

git-svn-id: svn://svn.chromium.org/blink/trunk@49179 bbb929c8-8fbe-4397-9dbb-9b2b20218538