third_party/WebKit/WebCore/platform/graphics/qt/ImageDecoderQt.cpp
@@ -36,11 +36,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QtGui/QImageReader>
 #include <qdebug.h>
 
-namespace {
-    const  QImage::Format DesiredFormat = QImage::Format_ARGB32;
-    const  bool debugImageDecoderQt = false;
-}
-
 namespace WebCore {
 
 ImageDecoder* ImageDecoder::create(const SharedBuffer& data)
@@ -156,9 +151,6 @@ ImageDecoderQt::ReadContext::ReadResult
             m_size = m_target.back().m_image.size();
             const bool supportsAnimation = m_reader.supportsAnimation();
 
-            if (debugImageDecoderQt)
-                qDebug() << "readImage(): #" << m_target.size() << " complete, " << m_size
-                    << " format " << m_dataFormat <<  " supportsAnimation=" <<  supportsAnimation;
             // No point in readinfg further
             if (!supportsAnimation)
                 return ReadComplete;
@@ -184,9 +176,6 @@ ImageDecoderQt::ReadContext::IncrementalReadResult
         m_buffer.seek(startPos);
         const bool gotHeader = imageData.m_image.size().width();
 
-        if (debugImageDecoderQt)
-            qDebug() << "readImageLines(): read() failed: " << m_reader.errorString()
-                << " got header=" << gotHeader;
         // [Experimental] Did we manage to read the header?
         if (gotHeader) {
             imageData.m_imageState = ImageHeaderValid;
@@ -227,16 +216,10 @@ void ImageDecoderQt::setData(SharedBuffer* data, bool allDataReceived)
     reset();
     ReadContext readContext(data, ReadContext::LoadComplete, m_imageList);
 
-    if (debugImageDecoderQt)
-        qDebug() << " setData " << data->size() << " image bytes, complete=" << allDataReceived;
-
     const  ReadContext::ReadResult readResult =  readContext.read(allDataReceived);
 
     if (hasFirstImageHeader())
         m_hasAlphaChannel = m_imageList[0].m_image.hasAlphaChannel();
-
-    if (debugImageDecoderQt)
-        qDebug()  << " read returns " << readResult;
 
     switch (readResult) {
     case ReadContext::ReadFailed:
@@ -264,22 +247,16 @@ void ImageDecoderQt::setData(SharedBuffer* data, bool allDataReceived)
 
 bool ImageDecoderQt::isSizeAvailable()
 {
-    if (debugImageDecoderQt)
-        qDebug() << " ImageDecoderQt::isSizeAvailable() returns" << ImageDecoder::isSizeAvailable();
     return ImageDecoder::isSizeAvailable();
 }
 
 size_t ImageDecoderQt::frameCount() const
 {
-    if (debugImageDecoderQt)
-        qDebug() << " ImageDecoderQt::frameCount() returns" << m_imageList.size();
     return m_imageList.size();
 }
 
 int ImageDecoderQt::repetitionCount() const
 {
-    if (debugImageDecoderQt)
-        qDebug() << " ImageDecoderQt::repetitionCount() returns" << m_loopCount;
     return m_loopCount;
 }
 
@@ -297,8 +274,6 @@ int ImageDecoderQt::duration(size_t index) const
 
 String ImageDecoderQt::filenameExtension() const
 {
-    if (debugImageDecoderQt)
-           qDebug() << " ImageDecoderQt::filenameExtension() returns" << m_imageFormat;
     return m_imageFormat;
 };
 
@@ -310,9 +285,6 @@ RGBA32Buffer* ImageDecoderQt::frameBufferAtIndex(size_t)
 
 QPixmap* ImageDecoderQt::imageAtIndex(size_t index) const
 {
-    if (debugImageDecoderQt)
-        qDebug() << "ImageDecoderQt::imageAtIndex(" << index << ')';
-
     if (index >= static_cast<size_t>(m_imageList.size()))
         return 0;
 
